jk/trunk/jk/src/verilogparser/VerilogParserFunction.output
Nonterminals useless in grammar

   target_statement
   io_declaration_list
   io_declaration
   expandrange_opt
   expandrange
   drive_strength_opt
   drive_strength
   strength0
   strength1


Terminals unused in grammar

   YYHIGHZ0
   YYHIGHZ1
   YYPULL0
   YYPULL1
   YYSTRONG0
   YYSTRONG1
   YYWEAK0
   YYWEAK1
   YYDEFINE
   YYDEF_NULL
   PARALLEL_CASE
   FULL_CASE


Rules useless in grammar

  256 target_statement: expression
  257                 | expression ':' expression
  258                 | YYDEF_NULL

  259 io_declaration_list: io_declaration
  260                    | io_declaration_list ',' io_declaration

  261 io_declaration: YYINPUT range_opt identifier
  262               | YYOUTPUT range_opt identifier
  263               | YYINOUT range_opt identifier

  264 expandrange_opt: /* empty */
  265                | expandrange

  266 expandrange: range

  267 drive_strength_opt: /* empty */
  268                   | drive_strength

  269 drive_strength: '(' strength0 ',' strength1 ')'
  270               | '(' strength1 ',' strength0 ')'

  271 strength0: YYSUPPLY0
  272          | YYSTRONG0
  273          | YYPULL0
  274          | YYWEAK0
  275          | YYHIGHZ0

  276 strength1: YYSUPPLY1
  277          | YYSTRONG1
  278          | YYPULL1
  279          | YYWEAK1
  280          | YYHIGHZ1


State 254 conflicts: 1 shift/reduce
State 334 conflicts: 1 shift/reduce
State 335 conflicts: 1 shift/reduce
State 336 conflicts: 1 shift/reduce
State 384 conflicts: 1 shift/reduce


Grammar

    0 $accept: source_text $end

    1 source_text: /* empty */
    2            | source_text description

    3 description: module

    4 $@1: /* empty */

    5 module: YYMODULE YYID $@1 port_list_opt ';' module_item_clr YYENDMODULE

    6 port_list_opt: '(' port_list ')'

    7 port_list: port
    8          | port_list ',' port

    9 port: port_expression_opt

   10 port_expression_opt: /* empty */
   11                    | port_expression

   12 port_expression: port_reference

   13 port_reference: YYID

   14 module_item_clr: /* empty */
   15                | module_item_clr module_item

   16 module_item: parameter_declaration
   17            | input_declaration
   18            | output_declaration
   19            | inout_declaration
   20            | net_declaration
   21            | reg_declaration
   22            | integer_declaration
   23            | gate_instantiation
   24            | module_or_primitive_instantiation
   25            | parameter_override
   26            | continuous_assign
   27            | always_statement
   28            | task
   29            | function

   30 $@2: /* empty */

   31 task: YYTASK YYID $@2 ';' tf_declaration_clr statement_opt YYENDTASK

   32 $@3: /* empty */

   33 function: YYFUNCTION range_or_type_opt YYID $@3 ';' tf_declaration_eclr statement_opt YYENDFUNCTION

   34 range_or_type_opt: /* empty */
   35                  | range_or_type

   36 range_or_type: range
   37              | YYINTEGER

   38 tf_declaration_clr: /* empty */
   39                   | tf_declaration_clr tf_declaration

   40 tf_declaration_eclr: tf_declaration
   41                    | tf_declaration_eclr tf_declaration

   42 tf_declaration: parameter_declaration
   43               | input_declaration
   44               | output_declaration
   45               | inout_declaration
   46               | reg_declaration
   47               | integer_declaration

   48 $@4: /* empty */

   49 parameter_declaration: YYPARAMETER range_opt $@4 assignment_list ';'

   50 $@5: /* empty */

   51 input_declaration: YYINPUT range_opt $@5 variable_list ';'

   52 $@6: /* empty */

   53 output_declaration: YYOUTPUT range_opt $@6 variable_list ';'

   54 $@7: /* empty */

   55 inout_declaration: YYINOUT range_opt $@7 variable_list ';'

   56 net_declaration: nettype assignment_list ';'
   57                | nettype variable_list ';'

   58 nettype: YYSWIRE
   59        | YYWIRE
   60        | YYTRI
   61        | YYTRI1
   62        | YYSUPPLY0
   63        | YYWAND
   64        | YYTRIAND
   65        | YYTRI0
   66        | YYSUPPLY1
   67        | YYWOR
   68        | YYTRIOR

   69 $@8: /* empty */

   70 reg_declaration: YYREG range_opt $@8 register_variable_list ';'

   71 $@9: /* empty */

   72 integer_declaration: YYINTEGER $@9 register_variable_list ';'

   73 $@10: /* empty */

   74 continuous_assign: YYASSIGN $@10 assignment_list ';'

   75 $@11: /* empty */

   76 parameter_override: YYDEFPARAM $@11 assignment_list ';'

   77 variable_list: identifier
   78              | variable_list ',' identifier

   79 register_variable_list: register_variable
   80                       | register_variable_list ',' register_variable

   81 register_variable: name_of_register
   82                  | name_of_register '[' expression ':' expression ']'
   83                  | name_of_register '[' YYDEF_ID ']'

   84 name_of_register: YYID

   85 range_opt: /* empty */
   86          | range

   87 range: '[' expression ':' expression ']'
   88      | '[' YYDEF_ID ']'

   89 assignment_list: assignment
   90                | assignment_list ',' assignment

   91 gate_instantiation: gatetype gate_instance_list ';'

   92 gatetype: YYAND
   93         | YYNAND
   94         | YYOR
   95         | YYNOR
   96         | YYXOR
   97         | YYXNOR
   98         | YYBUF
   99         | YYBUFIF0
  100         | YYBUFIF1
  101         | YYNOT

  102 gate_instance_list: gate_instance
  103                   | gate_instance_list ',' gate_instance

  104 gate_instance: '(' terminal_list ')'
  105              | name_of_gate_instance '(' terminal_list ')'

  106 name_of_gate_instance: YYID

  107 terminal_list: terminal
  108              | terminal_list ',' terminal

  109 terminal: expression

  110 module_or_primitive_instantiation: name_of_module_or_primitive module_or_primitive_option_clr module_or_primitive_instance_list ';'

  111 name_of_module_or_primitive: YYID
  112                            | YYDEF_ID

  113 module_or_primitive_option_clr: /* empty */
  114                               | module_or_primitive_option_clr module_or_primitive_option

  115 module_or_primitive_option: delay_or_parameter_value_assignment

  116 delay_or_parameter_value_assignment: '#' YYINUMBER
  117                                    | '#' YYRNUMBER
  118                                    | '#' identifier
  119                                    | '#' '(' mintypmax_expression_list ')'

  120 module_or_primitive_instance_list: module_or_primitive_instance
  121                                  | module_or_primitive_instance_list ',' module_or_primitive_instance

  122 module_or_primitive_instance: '(' module_connection_list ')'

  123 $@12: /* empty */

  124 module_or_primitive_instance: identifier $@12 '(' module_connection_list ')'

  125 module_connection_list: module_port_connection_list
  126                       | named_port_connection_list

  127 module_port_connection_list: module_port_connection
  128                            | module_port_connection_list ',' module_port_connection

  129 named_port_connection_list: named_port_connection
  130                           | named_port_connection_list ',' named_port_connection

  131 module_port_connection: /* empty */
  132                       | expression

  133 $@13: /* empty */

  134 named_port_connection: '.' identifier $@13 '(' connect_port ')'

  135 connect_port: /* empty */
  136             | expression

  137 always_statement: YYALWAYS statement

  138 statement_opt: /* empty */
  139              | statement

  140 statement_clr: /* empty */
  141              | statement_clr statement

  142 statement: ';'
  143          | assignment ';'
  144          | YYIF '(' expression ')' statement
  145          | YYIF '(' expression ')' statement YYELSE statement
  146          | YYCASE '(' expression ')' synopsys_directive case_item_eclr YYENDCASE
  147          | YYCASEZ '(' expression ')' synopsys_directive case_item_eclr YYENDCASE
  148          | YYCASEX '(' expression ')' synopsys_directive case_item_eclr YYENDCASE
  149          | YYFOR '(' assignment ';' expression ';' assignment ')' statement
  150          | event_control statement
  151          | lvalue '=' delay_control expression ';'
  152          | lvalue YYNBASSIGN delay_control expression ';'
  153          | seq_block
  154          | task_enable
  155          | YYASSIGN assignment ';'

  156 synopsys_directive: /* empty */

  157 assignment: lvalue '=' expression
  158           | lvalue YYNBASSIGN expression

  159 case_item_eclr: case_item
  160               | case_item_eclr case_item

  161 case_item: expression_list ':' statement
  162          | YYDEFAULT ':' statement
  163          | YYDEFAULT statement

  164 seq_block: YYBEGIN statement_clr YYEND
  165          | YYBEGIN ':' name_of_block block_declaration_clr statement_clr YYEND

  166 name_of_block: YYID

  167 block_declaration_clr: /* empty */
  168                      | block_declaration_clr block_declaration

  169 block_declaration: parameter_declaration
  170                  | reg_declaration

  171 $@14: /* empty */

  172 task_enable: YYID $@14 ';'

  173 $@15: /* empty */

  174 task_enable: YYID $@15 '(' expression_list ')' ';'

  175 lvalue: identifier

  176 $@16: /* empty */

  177 lvalue: identifier $@16 bitExpression
  178       | concatenation
  179       | YYDEF_ID bit_exp

  180 bit_exp: /* empty */
  181        | bitExpression

  182 mintypmax_expression_list: mintypmax_expression
  183                          | mintypmax_expression_list ',' mintypmax_expression

  184 mintypmax_expression: expression

  185 expression_list: expression
  186                | expression_list ',' expression

  187 expression: primary
  188           | '+' primary
  189           | '-' primary
  190           | '!' primary
  191           | '~' primary
  192           | '&' primary
  193           | '|' primary
  194           | '^' primary
  195           | YYLOGNAND primary
  196           | YYLOGNOR primary
  197           | YYLOGXNOR primary
  198           | expression '+' expression
  199           | expression '-' expression
  200           | expression '*' expression
  201           | expression YYLOGEQUALITY expression
  202           | expression YYLOGINEQUALITY expression
  203           | expression YYCASEEQUALITY expression
  204           | expression YYCASEINEQUALITY expression
  205           | expression YYLOGAND expression
  206           | expression YYLOGOR expression
  207           | expression '<' expression
  208           | expression '>' expression
  209           | expression '&' expression
  210           | expression '|' expression
  211           | expression '^' expression
  212           | expression YYLEQ expression
  213           | expression YYNBASSIGN expression
  214           | expression YYGEQ expression
  215           | expression YYLSHIFT expression
  216           | expression YYRSHIFT expression
  217           | expression YYLOGXNOR expression
  218           | expression '?' expression ':' expression

  219 primary: YYINUMBER
  220        | YYRNUMBER
  221        | identifier

  222 $@17: /* empty */

  223 primary: identifier $@17 bitExpression
  224        | concatenation
  225        | multiple_concatenation
  226        | function_call
  227        | YYBIT_BASE_STRING
  228        | '(' expression ')'
  229        | YYDEF_ID bit_exp

  230 bitExpression: '[' expression ']'
  231              | '[' expression ':' expression ']'

  232 concatenation: '{' expression_list '}'

  233 multiple_concatenation: '{' expression '{' expression_list '}' '}'

  234 $@18: /* empty */

  235 function_call: identifier '(' $@18 expression_list ')'

  236 identifier: YYID

  237 $@19: /* empty */

  238 identifier: identifier '.' $@19 YYID

  239 delay_control: '#' YYINUMBER
  240              | '#' YYRNUMBER
  241              | '#' identifier
  242              | '#' '(' mintypmax_expression ')'

  243 event_control: '@' '(' event_expression ')'
  244              | '@' '(' ored_event_expression ')'
  245              | '@' '*'
  246              | '@' '(' '*' ')'

  247 event_expression: expression
  248                 | YYPOSEDGE expression
  249                 | YYNEGEDGE expression
  250                 | YYEDGE expression

  251 ored_event_expression: event_expression or_expression event_expression
  252                      | ored_event_expression or_expression event_expression

  253 or_expression: YYOR
  254              | YYLOGOR
  255              | ','


Terminals, with rules where they appear

$end (0) 0
'!' (33) 190
'#' (35) 116 117 118 119 239 240 241 242
'&' (38) 192 209
'(' (40) 6 104 105 119 122 124 134 144 145 146 147 148 149 174 228
    235 242 243 244 246
')' (41) 6 104 105 119 122 124 134 144 145 146 147 148 149 174 228
    235 242 243 244 246
'*' (42) 200 245 246
'+' (43) 188 198
',' (44) 8 78 80 90 103 108 121 128 130 183 186 255
'-' (45) 189 199
'.' (46) 134 238
':' (58) 82 87 161 162 165 218 231
';' (59) 5 31 33 49 51 53 55 56 57 70 72 74 76 91 110 142 143 149 151
    152 155 172 174
'<' (60) 207
'=' (61) 151 157
'>' (62) 208
'?' (63) 218
'@' (64) 243 244 245 246
'[' (91) 82 83 87 88 230 231
']' (93) 82 83 87 88 230 231
'^' (94) 194 211
'{' (123) 232 233
'|' (124) 193 210
'}' (125) 232 233
'~' (126) 191
error (256)
YYID (258) 5 13 31 33 84 106 111 166 172 174 236 238
YYDEF_ID (259) 83 88 112 179 229
YYINUMBER (260) 116 219 239
YYRNUMBER (261) 117 220 240
YYBIT_BASE_STRING (262) 227
YYALWAYS (263) 137
YYAND (264) 92
YYASSIGN (265) 74 155
YYBEGIN (266) 164 165
YYBUF (267) 98
YYBUFIF0 (268) 99
YYBUFIF1 (269) 100
YYCASE (270) 146
YYCASEX (271) 148
YYCASEZ (272) 147
YYDEFAULT (273) 162 163
YYDEFPARAM (274) 76
YYELSE (275) 145
YYEDGE (276) 250
YYEND (277) 164 165
YYENDCASE (278) 146 147 148
YYENDMODULE (279) 5
YYENDFUNCTION (280) 33
YYENDTASK (281) 31
YYFOR (282) 149
YYFUNCTION (283) 33
YYGEQ (284) 214
YYHIGHZ0 (285)
YYHIGHZ1 (286)
YYIF (287) 144 145
YYINOUT (288) 55
YYINPUT (289) 51
YYINTEGER (290) 37 72
YYLEQ (291) 212
YYLOGAND (292) 205
YYCASEEQUALITY (293) 203
YYCASEINEQUALITY (294) 204
YYLOGNAND (295) 195
YYLOGNOR (296) 196
YYLOGOR (297) 206 254
YYLOGXNOR (298) 197 217
YYLOGEQUALITY (299) 201
YYLOGINEQUALITY (300) 202
YYLSHIFT (301) 215
YYMODULE (302) 5
YYNAND (303) 93
YYNBASSIGN (304) 152 158 213
YYNEGEDGE (305) 249
YYNOR (306) 95
YYNOT (307) 101
YYOR (308) 94 253
YYOUTPUT (309) 53
YYPARAMETER (310) 49
YYPOSEDGE (311) 248
YYPULL0 (312)
YYPULL1 (313)
YYREG (314) 70
YYRSHIFT (315) 216
YYSTRONG0 (316)
YYSTRONG1 (317)
YYSUPPLY0 (318) 62
YYSUPPLY1 (319) 66
YYSWIRE (320) 58
YYTASK (321) 31
YYTRI (322) 60
YYTRI0 (323) 65
YYTRI1 (324) 61
YYTRIAND (325) 64
YYTRIOR (326) 68
YYWAND (327) 63
YYWEAK0 (328)
YYWEAK1 (329)
YYWIRE (330) 59
YYWOR (331) 67
YYXNOR (332) 97
YYXOR (333) 96
YYDEFINE (334)
YYDEF_NULL (335)
PARALLEL_CASE (336)
FULL_CASE (337)
YYUNARYOPERATOR (338)


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
source_text (109)
    on left: 1 2, on right: 0 2
description (110)
    on left: 3, on right: 2
module (111)
    on left: 5, on right: 3
$@1 (112)
    on left: 4, on right: 5
port_list_opt (113)
    on left: 6, on right: 5
port_list (114)
    on left: 7 8, on right: 6 8
port (115)
    on left: 9, on right: 7 8
port_expression_opt (116)
    on left: 10 11, on right: 9
port_expression (117)
    on left: 12, on right: 11
port_reference (118)
    on left: 13, on right: 12
module_item_clr (119)
    on left: 14 15, on right: 5 15
module_item (120)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29, on right: 15
task (121)
    on left: 31, on right: 28
$@2 (122)
    on left: 30, on right: 31
function (123)
    on left: 33, on right: 29
$@3 (124)
    on left: 32, on right: 33
range_or_type_opt (125)
    on left: 34 35, on right: 33
range_or_type (126)
    on left: 36 37, on right: 35
tf_declaration_clr (127)
    on left: 38 39, on right: 31 39
tf_declaration_eclr (128)
    on left: 40 41, on right: 33 41
tf_declaration (129)
    on left: 42 43 44 45 46 47, on right: 39 40 41
parameter_declaration (130)
    on left: 49, on right: 16 42 169
$@4 (131)
    on left: 48, on right: 49
input_declaration (132)
    on left: 51, on right: 17 43
$@5 (133)
    on left: 50, on right: 51
output_declaration (134)
    on left: 53, on right: 18 44
$@6 (135)
    on left: 52, on right: 53
inout_declaration (136)
    on left: 55, on right: 19 45
$@7 (137)
    on left: 54, on right: 55
net_declaration (138)
    on left: 56 57, on right: 20
nettype (139)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 56 57
reg_declaration (140)
    on left: 70, on right: 21 46 170
$@8 (141)
    on left: 69, on right: 70
integer_declaration (142)
    on left: 72, on right: 22 47
$@9 (143)
    on left: 71, on right: 72
continuous_assign (144)
    on left: 74, on right: 26
$@10 (145)
    on left: 73, on right: 74
parameter_override (146)
    on left: 76, on right: 25
$@11 (147)
    on left: 75, on right: 76
variable_list (148)
    on left: 77 78, on right: 51 53 55 57 78
register_variable_list (149)
    on left: 79 80, on right: 70 72 80
register_variable (150)
    on left: 81 82 83, on right: 79 80
name_of_register (151)
    on left: 84, on right: 81 82 83
range_opt (152)
    on left: 85 86, on right: 49 51 53 55 70
range (153)
    on left: 87 88, on right: 36 86
assignment_list (154)
    on left: 89 90, on right: 49 56 74 76 90
gate_instantiation (155)
    on left: 91, on right: 23
gatetype (156)
    on left: 92 93 94 95 96 97 98 99 100 101, on right: 91
gate_instance_list (157)
    on left: 102 103, on right: 91 103
gate_instance (158)
    on left: 104 105, on right: 102 103
name_of_gate_instance (159)
    on left: 106, on right: 105
terminal_list (160)
    on left: 107 108, on right: 104 105 108
terminal (161)
    on left: 109, on right: 107 108
module_or_primitive_instantiation (162)
    on left: 110, on right: 24
name_of_module_or_primitive (163)
    on left: 111 112, on right: 110
module_or_primitive_option_clr (164)
    on left: 113 114, on right: 110 114
module_or_primitive_option (165)
    on left: 115, on right: 114
delay_or_parameter_value_assignment (166)
    on left: 116 117 118 119, on right: 115
module_or_primitive_instance_list (167)
    on left: 120 121, on right: 110 121
module_or_primitive_instance (168)
    on left: 122 124, on right: 120 121
$@12 (169)
    on left: 123, on right: 124
module_connection_list (170)
    on left: 125 126, on right: 122 124
module_port_connection_list (171)
    on left: 127 128, on right: 125 128
named_port_connection_list (172)
    on left: 129 130, on right: 126 130
module_port_connection (173)
    on left: 131 132, on right: 127 128
named_port_connection (174)
    on left: 134, on right: 129 130
$@13 (175)
    on left: 133, on right: 134
connect_port (176)
    on left: 135 136, on right: 134
always_statement (177)
    on left: 137, on right: 27
statement_opt (178)
    on left: 138 139, on right: 31 33
statement_clr (179)
    on left: 140 141, on right: 141 164 165
statement (180)
    on left: 142 143 144 145 146 147 148 149 150 151 152 153 154 155,
    on right: 137 139 141 144 145 149 150 161 162 163
synopsys_directive (181)
    on left: 156, on right: 146 147 148
assignment (182)
    on left: 157 158, on right: 89 90 143 149 155
case_item_eclr (183)
    on left: 159 160, on right: 146 147 148 160
case_item (184)
    on left: 161 162 163, on right: 159 160
seq_block (185)
    on left: 164 165, on right: 153
name_of_block (186)
    on left: 166, on right: 165
block_declaration_clr (187)
    on left: 167 168, on right: 165 168
block_declaration (188)
    on left: 169 170, on right: 168
task_enable (189)
    on left: 172 174, on right: 154
$@14 (190)
    on left: 171, on right: 172
$@15 (191)
    on left: 173, on right: 174
lvalue (192)
    on left: 175 177 178 179, on right: 151 152 157 158
$@16 (193)
    on left: 176, on right: 177
bit_exp (194)
    on left: 180 181, on right: 179 229
mintypmax_expression_list (195)
    on left: 182 183, on right: 119 183
mintypmax_expression (196)
    on left: 184, on right: 182 183 242
expression_list (197)
    on left: 185 186, on right: 161 174 186 232 233 235
expression (198)
    on left: 187 188 189 190 191 192 193 194 195 196 197 198 199 200
    201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216
    217 218, on right: 82 87 109 132 136 144 145 146 147 148 149 151
    152 157 158 184 185 186 198 199 200 201 202 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 228 230 231 233 247
    248 249 250
primary (199)
    on left: 219 220 221 223 224 225 226 227 228 229, on right: 187
    188 189 190 191 192 193 194 195 196 197
$@17 (200)
    on left: 222, on right: 223
bitExpression (201)
    on left: 230 231, on right: 177 181 223
concatenation (202)
    on left: 232, on right: 178 224
multiple_concatenation (203)
    on left: 233, on right: 225
function_call (204)
    on left: 235, on right: 226
$@18 (205)
    on left: 234, on right: 235
identifier (206)
    on left: 236 238, on right: 77 78 118 124 134 175 177 221 223 235
    238 241
$@19 (207)
    on left: 237, on right: 238
delay_control (208)
    on left: 239 240 241 242, on right: 151 152
event_control (209)
    on left: 243 244 245 246, on right: 150
event_expression (210)
    on left: 247 248 249 250, on right: 243 251 252
ored_event_expression (211)
    on left: 251 252, on right: 244 252
or_expression (212)
    on left: 253 254 255, on right: 251 252


state 0

    0 $accept: . source_text $end

    $default  reduce using rule 1 (source_text)

    source_text  go to state 1


state 1

    0 $accept: source_text . $end
    2 source_text: source_text . description

    $end      shift, and go to state 2
    YYMODULE  shift, and go to state 3

    description  go to state 4
    module       go to state 5


state 2

    0 $accept: source_text $end .

    $default  accept


state 3

    5 module: YYMODULE . YYID $@1 port_list_opt ';' module_item_clr YYENDMODULE

    YYID  shift, and go to state 6


state 4

    2 source_text: source_text description .

    $default  reduce using rule 2 (source_text)


state 5

    3 description: module .

    $default  reduce using rule 3 (description)


state 6

    5 module: YYMODULE YYID . $@1 port_list_opt ';' module_item_clr YYENDMODULE

    $default  reduce using rule 4 ($@1)

    $@1  go to state 7


state 7

    5 module: YYMODULE YYID $@1 . port_list_opt ';' module_item_clr YYENDMODULE

    '('  shift, and go to state 8

    port_list_opt  go to state 9


state 8

    6 port_list_opt: '(' . port_list ')'

    YYID  shift, and go to state 10

    $default  reduce using rule 10 (port_expression_opt)

    port_list            go to state 11
    port                 go to state 12
    port_expression_opt  go to state 13
    port_expression      go to state 14
    port_reference       go to state 15


state 9

    5 module: YYMODULE YYID $@1 port_list_opt . ';' module_item_clr YYENDMODULE

    ';'  shift, and go to state 16


state 10

   13 port_reference: YYID .

    $default  reduce using rule 13 (port_reference)


state 11

    6 port_list_opt: '(' port_list . ')'
    8 port_list: port_list . ',' port

    ')'  shift, and go to state 17
    ','  shift, and go to state 18


state 12

    7 port_list: port .

    $default  reduce using rule 7 (port_list)


state 13

    9 port: port_expression_opt .

    $default  reduce using rule 9 (port)


state 14

   11 port_expression_opt: port_expression .

    $default  reduce using rule 11 (port_expression_opt)


state 15

   12 port_expression: port_reference .

    $default  reduce using rule 12 (port_expression)


state 16

    5 module: YYMODULE YYID $@1 port_list_opt ';' . module_item_clr YYENDMODULE

    $default  reduce using rule 14 (module_item_clr)

    module_item_clr  go to state 19


state 17

    6 port_list_opt: '(' port_list ')' .

    $default  reduce using rule 6 (port_list_opt)


state 18

    8 port_list: port_list ',' . port

    YYID  shift, and go to state 10

    $default  reduce using rule 10 (port_expression_opt)

    port                 go to state 20
    port_expression_opt  go to state 13
    port_expression      go to state 14
    port_reference       go to state 15


state 19

    5 module: YYMODULE YYID $@1 port_list_opt ';' module_item_clr . YYENDMODULE
   15 module_item_clr: module_item_clr . module_item

    YYID         shift, and go to state 21
    YYDEF_ID     shift, and go to state 22
    YYALWAYS     shift, and go to state 23
    YYAND        shift, and go to state 24
    YYASSIGN     shift, and go to state 25
    YYBUF        shift, and go to state 26
    YYBUFIF0     shift, and go to state 27
    YYBUFIF1     shift, and go to state 28
    YYDEFPARAM   shift, and go to state 29
    YYENDMODULE  shift, and go to state 30
    YYFUNCTION   shift, and go to state 31
    YYINOUT      shift, and go to state 32
    YYINPUT      shift, and go to state 33
    YYINTEGER    shift, and go to state 34
    YYNAND       shift, and go to state 35
    YYNOR        shift, and go to state 36
    YYNOT        shift, and go to state 37
    YYOR         shift, and go to state 38
    YYOUTPUT     shift, and go to state 39
    YYPARAMETER  shift, and go to state 40
    YYREG        shift, and go to state 41
    YYSUPPLY0    shift, and go to state 42
    YYSUPPLY1    shift, and go to state 43
    YYSWIRE      shift, and go to state 44
    YYTASK       shift, and go to state 45
    YYTRI        shift, and go to state 46
    YYTRI0       shift, and go to state 47
    YYTRI1       shift, and go to state 48
    YYTRIAND     shift, and go to state 49
    YYTRIOR      shift, and go to state 50
    YYWAND       shift, and go to state 51
    YYWIRE       shift, and go to state 52
    YYWOR        shift, and go to state 53
    YYXNOR       shift, and go to state 54
    YYXOR        shift, and go to state 55

    module_item                        go to state 56
    task                               go to state 57
    function                           go to state 58
    parameter_declaration              go to state 59
    input_declaration                  go to state 60
    output_declaration                 go to state 61
    inout_declaration                  go to state 62
    net_declaration                    go to state 63
    nettype                            go to state 64
    reg_declaration                    go to state 65
    integer_declaration                go to state 66
    continuous_assign                  go to state 67
    parameter_override                 go to state 68
    gate_instantiation                 go to state 69
    gatetype                           go to state 70
    module_or_primitive_instantiation  go to state 71
    name_of_module_or_primitive        go to state 72
    always_statement                   go to state 73


state 20

    8 port_list: port_list ',' port .

    $default  reduce using rule 8 (port_list)


state 21

  111 name_of_module_or_primitive: YYID .

    $default  reduce using rule 111 (name_of_module_or_primitive)


state 22

  112 name_of_module_or_primitive: YYDEF_ID .

    $default  reduce using rule 112 (name_of_module_or_primitive)


state 23

  137 always_statement: YYALWAYS . statement

    YYID      shift, and go to state 74
    YYDEF_ID  shift, and go to state 75
    YYASSIGN  shift, and go to state 76
    YYBEGIN   shift, and go to state 77
    YYCASE    shift, and go to state 78
    YYCASEX   shift, and go to state 79
    YYCASEZ   shift, and go to state 80
    YYFOR     shift, and go to state 81
    YYIF      shift, and go to state 82
    ';'       shift, and go to state 83
    '{'       shift, and go to state 84
    '@'       shift, and go to state 85

    statement      go to state 86
    assignment     go to state 87
    seq_block      go to state 88
    task_enable    go to state 89
    lvalue         go to state 90
    concatenation  go to state 91
    identifier     go to state 92
    event_control  go to state 93


state 24

   92 gatetype: YYAND .

    $default  reduce using rule 92 (gatetype)


state 25

   74 continuous_assign: YYASSIGN . $@10 assignment_list ';'

    $default  reduce using rule 73 ($@10)

    $@10  go to state 94


state 26

   98 gatetype: YYBUF .

    $default  reduce using rule 98 (gatetype)


state 27

   99 gatetype: YYBUFIF0 .

    $default  reduce using rule 99 (gatetype)


state 28

  100 gatetype: YYBUFIF1 .

    $default  reduce using rule 100 (gatetype)


state 29

   76 parameter_override: YYDEFPARAM . $@11 assignment_list ';'

    $default  reduce using rule 75 ($@11)

    $@11  go to state 95


state 30

    5 module: YYMODULE YYID $@1 port_list_opt ';' module_item_clr YYENDMODULE .

    $default  reduce using rule 5 (module)


state 31

   33 function: YYFUNCTION . range_or_type_opt YYID $@3 ';' tf_declaration_eclr statement_opt YYENDFUNCTION

    YYINTEGER  shift, and go to state 96
    '['        shift, and go to state 97

    $default  reduce using rule 34 (range_or_type_opt)

    range_or_type_opt  go to state 98
    range_or_type      go to state 99
    range              go to state 100


state 32

   55 inout_declaration: YYINOUT . range_opt $@7 variable_list ';'

    '['  shift, and go to state 97

    $default  reduce using rule 85 (range_opt)

    range_opt  go to state 101
    range      go to state 102


state 33

   51 input_declaration: YYINPUT . range_opt $@5 variable_list ';'

    '['  shift, and go to state 97

    $default  reduce using rule 85 (range_opt)

    range_opt  go to state 103
    range      go to state 102


state 34

   72 integer_declaration: YYINTEGER . $@9 register_variable_list ';'

    $default  reduce using rule 71 ($@9)

    $@9  go to state 104


state 35

   93 gatetype: YYNAND .

    $default  reduce using rule 93 (gatetype)


state 36

   95 gatetype: YYNOR .

    $default  reduce using rule 95 (gatetype)


state 37

  101 gatetype: YYNOT .

    $default  reduce using rule 101 (gatetype)


state 38

   94 gatetype: YYOR .

    $default  reduce using rule 94 (gatetype)


state 39

   53 output_declaration: YYOUTPUT . range_opt $@6 variable_list ';'

    '['  shift, and go to state 97

    $default  reduce using rule 85 (range_opt)

    range_opt  go to state 105
    range      go to state 102


state 40

   49 parameter_declaration: YYPARAMETER . range_opt $@4 assignment_list ';'

    '['  shift, and go to state 97

    $default  reduce using rule 85 (range_opt)

    range_opt  go to state 106
    range      go to state 102


state 41

   70 reg_declaration: YYREG . range_opt $@8 register_variable_list ';'

    '['  shift, and go to state 97

    $default  reduce using rule 85 (range_opt)

    range_opt  go to state 107
    range      go to state 102


state 42

   62 nettype: YYSUPPLY0 .

    $default  reduce using rule 62 (nettype)


state 43

   66 nettype: YYSUPPLY1 .

    $default  reduce using rule 66 (nettype)


state 44

   58 nettype: YYSWIRE .

    $default  reduce using rule 58 (nettype)


state 45

   31 task: YYTASK . YYID $@2 ';' tf_declaration_clr statement_opt YYENDTASK

    YYID  shift, and go to state 108


state 46

   60 nettype: YYTRI .

    $default  reduce using rule 60 (nettype)


state 47

   65 nettype: YYTRI0 .

    $default  reduce using rule 65 (nettype)


state 48

   61 nettype: YYTRI1 .

    $default  reduce using rule 61 (nettype)


state 49

   64 nettype: YYTRIAND .

    $default  reduce using rule 64 (nettype)


state 50

   68 nettype: YYTRIOR .

    $default  reduce using rule 68 (nettype)


state 51

   63 nettype: YYWAND .

    $default  reduce using rule 63 (nettype)


state 52

   59 nettype: YYWIRE .

    $default  reduce using rule 59 (nettype)


state 53

   67 nettype: YYWOR .

    $default  reduce using rule 67 (nettype)


state 54

   97 gatetype: YYXNOR .

    $default  reduce using rule 97 (gatetype)


state 55

   96 gatetype: YYXOR .

    $default  reduce using rule 96 (gatetype)


state 56

   15 module_item_clr: module_item_clr module_item .

    $default  reduce using rule 15 (module_item_clr)


state 57

   28 module_item: task .

    $default  reduce using rule 28 (module_item)


state 58

   29 module_item: function .

    $default  reduce using rule 29 (module_item)


state 59

   16 module_item: parameter_declaration .

    $default  reduce using rule 16 (module_item)


state 60

   17 module_item: input_declaration .

    $default  reduce using rule 17 (module_item)


state 61

   18 module_item: output_declaration .

    $default  reduce using rule 18 (module_item)


state 62

   19 module_item: inout_declaration .

    $default  reduce using rule 19 (module_item)


state 63

   20 module_item: net_declaration .

    $default  reduce using rule 20 (module_item)


state 64

   56 net_declaration: nettype . assignment_list ';'
   57                | nettype . variable_list ';'

    YYID      shift, and go to state 109
    YYDEF_ID  shift, and go to state 75
    '{'       shift, and go to state 84

    variable_list    go to state 110
    assignment_list  go to state 111
    assignment       go to state 112
    lvalue           go to state 113
    concatenation    go to state 91
    identifier       go to state 114


state 65

   21 module_item: reg_declaration .

    $default  reduce using rule 21 (module_item)


state 66

   22 module_item: integer_declaration .

    $default  reduce using rule 22 (module_item)


state 67

   26 module_item: continuous_assign .

    $default  reduce using rule 26 (module_item)


state 68

   25 module_item: parameter_override .

    $default  reduce using rule 25 (module_item)


state 69

   23 module_item: gate_instantiation .

    $default  reduce using rule 23 (module_item)


state 70

   91 gate_instantiation: gatetype . gate_instance_list ';'

    YYID  shift, and go to state 115
    '('   shift, and go to state 116

    gate_instance_list     go to state 117
    gate_instance          go to state 118
    name_of_gate_instance  go to state 119


state 71

   24 module_item: module_or_primitive_instantiation .

    $default  reduce using rule 24 (module_item)


state 72
